Tests/CompilerTests/negative/undefined-module.expected
negative/undefined-module.hylo:3.8-14: error: undefined module 'Jugemu'
import Jugemu
       ~~~~~~
